test/good/nullables/op07.px

s: String?
s ??= "?"
print s ?? ""
