test/bad/dictionaries/decl03.px

d1 = {0: ""}
d2: {Float:String} = d1
